<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:menuCategory="container">

        <item
            android:id="@+id/maps"
            android:title="Open Maps" />

        <item
            android:id="@+id/settingsButton"
            android:title="@string/settings" />
        <item
            android:id="@+id/logoutButton"
            android:title="@string/logout" />

    </group>




</menu>